--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,1 +1,107 @@
+.lesson-four-task-one .btn:hover {
+  color: red;
+  background: yellow;
+}
 
+.lesson-four-task-two .link:hover {
+  background: green;
+}
+
+.lesson-four-task-two .link:hover + .title {
+  background: green;
+}
+
+.lesson-four-task-three .link:visited {
+  color: yellow;
+}
+
+.lesson-four-task-four > #sidebar > .link:link {
+  color: red;
+}
+
+.lesson-four-task-five > .btn:active {
+  background-color: blue;
+}
+
+.lesson-four-task-six > .btn:focus {
+  background-color: orange;
+  color: orange;
+}
+
+.lesson-four-task-seven > #target:target {
+  background-color: blue;
+  color: rgb(255, 255, 255);
+}
+
+.lesson-four-task-eight
+  > input[type='checkbox']:checked
+  ~ #target {
+  background-color: blue;
+  color: rgb(255, 255, 255);
+}
+
+.lesson-four-task-nine > p:lang(uk) {
+  color: blue;
+}
+
+.lesson-four-task-ten input:enabled {
+  background-color: yellow;
+  color: red;
+}
+
+.lesson-four-task-eleven input:disabled {
+  background-color: yellow;
+}
+
+.lesson-four-task-twelve > input:read-write {
+  background-color: yellow;
+}
+
+.lesson-four-task-thirteen > input:read-only {
+  background-color: yellow;
+}
+
+.lesson-four-task-fourteen > input:valid {
+  background-color: green;
+}
+
+.lesson-four-task-fourteen > input:invalid {
+  background-color: red;
+}
+
+.lesson-four-task-fifteen textarea:optional {
+  background-color: red;
+}
+
+.lesson-four-task-sixteen input:out-of-range {
+  background-color: red;
+}
+
+.lesson-four-task-sixteen input {
+  background-color: rgb(179, 170, 170);
+}
+
+.lesson-four-task-seventeen input {
+  background-color: rgb(179, 170, 170);
+}
+
+.lesson-four-task-seventeen input:in-range {
+  background-color: red;
+}
+
+.lesson-four-task-eighteen > input:placeholder-shown {
+  background-color: red;
+}
+
+.lesson-four-task-nineteen button:focus-within {
+  background-color: yellow;
+  color: white;
+}
+
+.lesson-four-task-twenty input:invalid {
+  background-color: red;
+}
+
+.lesson-four-task-twenty input:valid {
+  background-color: rgb(255, 255, 255);
+}
